GlyphScriptCompiler.IntegrationTests/TestData/SyntaxErrorExamples/invalidDeclaration.gs
ğŸ”¢ x = 5
ğŸ”· y = 2.5
invalidType z = 10
